feat: add version command

--- a/.goreleaser.yml
+++ b/.goreleaser.yml
@@ -5,7 +5,10 @@ before:
     - go mod tidy
 
 builds:
-  - env:
+  - ldflags:
+      - -s -w
+      - -X github.com/matty-rose/gha-docs/internal/version.BuildVersion={{ .Version }}
+    env:
       - CGO_ENABLED=0
     goos:
       - linux
