--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -8,9 +8,34 @@ on:
       - main
 env:
   GO_VERSION: 1.17
+  GOLANGCI_LINT_VERSION: v1.42.1
   GOTESTSUM_VERSION: 1.7.0
   TASK_VERSION: 3.9.0
 jobs:
+  code-quality:
+    runs-on: ubuntu-latest
+    steps:
+      - name: Checkout
+        uses: actions/checkout@v2.3.4
+        with:
+          fetch-depth: "0"
+      - name: Setup go
+        uses: actions/setup-go@v2.1.3
+        with:
+          go-version: ${{ env.GO_VERSION }}
+      - name: Install Task
+        uses: arduino/setup-task@v1
+        with:
+          version: ${{ env.TASK_VERSION }}
+      - name: Verify
+        run: |
+          task verify
+      - name: golangci-lint
+        uses: golangci/golangci-lint-action@v2
+        with:
+          version: ${{ env.GOLANGCI_LINT_VERSION }}
+          skip-go-installation: true
+          args: -v
   test:
     name: test
     runs-on: ubuntu-latest
