--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -19,6 +19,7 @@ jobs:
         uses: actions/checkout@v2.3.4
         with:
           fetch-depth: "0"
+      - uses: wagoid/commitlint-github-action@v4
       - name: Setup go
         uses: actions/setup-go@v2.1.3
         with:
