test: add id to step to get branch
Signed-off-by: Matthew Rose <matthew.rose@maxkelsen.com>

--- a/pkg/parser/testdata/uses.yaml
+++ b/pkg/parser/testdata/uses.yaml
@@ -17,6 +17,7 @@ runs:
       id: dummy
       run: echo hello
     - name: Cache test
+      id: cache-test
       uses: actions/cache@v2.1.6
       with:
         path: ./
