fix: implement parsing for locally referenced actions in 'uses'
Signed-off-by: Matthew Rose <matthewrose153@gmail.com>

--- a/pkg/parser/testdata/uses.yaml
+++ b/pkg/parser/testdata/uses.yaml
@@ -21,3 +21,6 @@ runs:
       uses: actions/cache@v2.1.6
       with:
         path: ./
+    - name: Local
+      id: cache-test
+      uses: ./.github/actions/test-action-dir
